made the avatars for drew and Noah, other updates to the defaults

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -78,7 +78,7 @@
                 </li>
 
                 <li class="nav-item">
-                    <a target="_blank" class="nav-link" href="https://www.facebook.com/wowthemesnet/"><i class="fab fa-facebook-f"></i></a>
+                    <a target="_blank" class="nav-link" href="https://www.facebook.com/Mojo-Order-Ahead-276312713022245"><i class="fab fa-facebook-f"></i></a>
                 </li>
                 
             </ul>		
