--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -26,7 +26,7 @@ post_class: post-template
                 {% if page.author %}				
 				<div class="row post-top-meta">
 					<div class="col-md-2">
-						<img class="author-thumb" src="https://www.gravatar.com/avatar/{{ author.gravatar }}?s=250&d=mm&r=x" alt="{{ author.display_name }}">
+                        {% if author.avatar %} <img class="author-thumb" src="{% if author.avatar contains "://" %}{{ author.avatar }}{% else %}{{ author.avatar | absolute_url }}{% endif %}" alt="{{ author.display_name }}"> {% endif %}
 					</div>
 					<div class="col-md-10">
 						<a target="_blank" class="link-dark" href="{{ author.web }}">{{ author.display_name }}</a><a target="_blank" href="{{ author.twitter }}" class="btn follow">Follow</a>
