--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,7 +46,7 @@
     
     <!-- Begin Logo -->
     <a class="navbar-brand" href="https://mojocoffee.io">
-        <img src="{{site.logo}}" alt="{{ site.name }}">
+        <img src="{{ site.baseurl }}/{{site.logo}}" alt="{{ site.name }}">
     </a>
     <!-- End Logo -->
   
