--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,8 @@
 <title>{{ page.title }} | {{site.name}}</title>
     
 {% if page.description %}<meta name="description" content="{{ page.description }}">{% endif %} 
+
+<meta property="og:image" content="http://blog.mojocoffee.io/{{ page.image }}" />
     
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     
