--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
     
 {% if page.description %}<meta name="description" content="{{ page.description }}">{% endif %} 
 
-<meta property="og:title" content="{{page.title}}" />
+<meta property="og:title" content="{{ page.title }} | {{site.name}}" />
 <meta property="og:image" content="http://blog.mojocoffee.io/{{ page.image }}" />
     
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
