Case study polish

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -671,6 +671,9 @@ License: https://www.wowthemes.net/freebies-license/
 }
 .center {
     margin: auto;
+    text-align: center;
+    align-content: center;
+    align-items: center;
 }
 .simple-border {
     border-width: 1px;
