--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -141,7 +141,7 @@
             </div>
 		</div>
 		<div class="col-md-8 p-5 align-self-center text-center">
-          {% assign tags_list = site.categories %}  
+          <!-- {% assign tags_list = site.categories %}  
           {% if tags_list.first[0] == null %}
             {% for tag in tags_list %} 
               <a href="{{ site.baseurl }}/category/{{ tag }}">{{ tag | capitalize }} {{ site.tags[tag].size }}</a>
@@ -151,7 +151,7 @@
               <a href="{{ site.baseurl }}/category/{{ tag[0] }}">{{ tag[0] | capitalize }} ({{ tag[1].size }})</a>
             {% endfor %}
           {% endif %}
-        {% assign tags_list = nil %}
+        {% assign tags_list = nil %} -->
 
 		</div>
 	</div>
