Remove tags from post

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -60,7 +60,7 @@ post_class: post-template
             </p>
             
 			<!-- Post Categories -->
-			<div class="after-post-tags">
+			<!-- <div class="after-post-tags">
 				<ul class="tags">
                     {% assign sortedCategories = page.categories | sort %}
                     {% for category in sortedCategories %}
@@ -69,7 +69,7 @@ post_class: post-template
                     </li>
                     {% endfor %}
 				</ul>
-			</div>
+			</div> -->
 			<!-- End Categories -->
             
             <!-- Prev/Next -->
