--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
 {% if page.description %}<meta name="description" content="{{ page.description }}">{% endif %} 
 
 <meta property="og:title" content="{{ page.title }} | {{site.name}}" />
-<meta property="og:image" content="http://blog.mojocoffee.io/{{ page.image }}" />
+<meta property="og:image" content="http://blog.coffeepass.io/{{ page.image }}" />
     
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     
@@ -48,7 +48,7 @@
     <div class="container pr-0">    
     
     <!-- Begin Logo -->
-    <a class="navbar-brand" href="https://mojocoffee.io">
+    <a class="navbar-brand" href="https://coffeepass.io">
         <img src="{{ site.baseurl }}/{{site.logo}}" alt="{{ site.name }}">
     </a>
     <!-- End Logo -->
@@ -73,15 +73,15 @@
                 </li>
                 
                 <li class="nav-item">
-                    <a class="nav-link" href="https://mojocoffee.io/#/aboutus"> About</a>
+                    <a class="nav-link" href="https://coffeepass.io/#/aboutus"> About</a>
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="https://mojocoffee.io/#/shoplanding"> What's Mojo?</a>
+                    <a class="nav-link" href="https://coffeepass.io/#/shoplanding"> What's CoffeePass?</a>
                 </li>
 
                 <li class="nav-item">
-                    <a target="_blank" class="nav-link" href="https://www.facebook.com/Mojo-Order-Ahead-276312713022245"><i class="fab fa-facebook-f"></i></a>
+                    <a target="_blank" class="nav-link" href="https://www.facebook.com/CoffeePass-Order-Ahead-276312713022245"><i class="fab fa-facebook-f"></i></a>
                 </li>
                 
             </ul>		
