--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -36,7 +36,7 @@ post_class: post-template
                 {% endif %}
                 
                 <!-- Post Title -->
-				<h1 class="posttitle mojo-color">{{ page.title }}</h1> 
+				<h1 class="posttitle CoffeePass-color">{{ page.title }}</h1> 
                 
 			</div>
 
