--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -664,7 +664,7 @@ License: https://www.wowthemes.net/freebies-license/
     font-size: 300%;
 }
 
-.mojo-color {
+.CoffeePass-color {
     color: #56719e;
 }
 
